app/src/Help/HelpPanel.css
#help-panel {
  max-height: 100%;
  height: 100%;
  margin: 0;
  padding: 10px;
  overflow: auto;
  display: flex;
  justify-content: center;
}

#help-content {
  max-width: 1000px;
}

h2 {
  margin-left: 10px;
}

h3 {
  font-size: 15px;
  font-weight: bold;
}

.box {
  display: inline-block;
  position: relative;
  top: 5px;
  min-width: 30px;
  min-height: 20px;
}

.help-normal {
  border: 1px solid black;
}

.help-diff {
  box-shadow: 0 0 2px 1px orange;
}

.help-new {
  box-shadow: 0 0 3px 0px blue;
}

.help-empty {
  box-shadow: 0 0 3px 0px red;
}

.help-unchanged::after {
  background-color: #ddd;
  color: #bbb;
  content: "Unchanged";
}
.help-todo::after {
  background-color: #ccc;
  color: #000;
  content: "To Do";
}
.help-done::after {
  background-color: #c2f0c2;
  color: #28a428;
  content: "Done";
}

.help-text-red::after {
  color: red;
  content: "Red"
}

.help-text-green::after {
  color: green;
  content: "Green"
}

input {
  width: 100%;
}

